Lec 51 Добавил конфигурацию Spring Security и тесты