@@ -1,18 +1,11 @@
 package pl.pingwit.pingwitdemospring.converter;
 
-import org.apache.commons.lang3.RandomStringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.context.annotation.Scope;
-import org.springframework.context.annotation.ScopedProxyMode;
 import org.springframework.stereotype.Component;
-import org.springframework.web.context.WebApplicationContext;
 import pl.pingwit.pingwitdemospring.controller.dto.UserDTO;
 import pl.pingwit.pingwitdemospring.repository.model.User;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Pavel Radkevich
@@ -23,15 +16,6 @@ import java.util.stream.Collectors;
 //@Scope(value = WebApplicationContext.SCOPE_REQUEST, proxyMode = ScopedProxyMode.TARGET_CLASS)
 //@Scope("prototype")
 public class UserConverter {
-
-    private static final Logger log = LoggerFactory.getLogger(UserConverter.class);
-
-    private final String name;
-
-    public UserConverter() {
-        this.name = RandomStringUtils.randomAlphabetic(4);
-        log.info(String.format("created object of type UserConverter with name: %s", name));
-    }
 
     public User convertToEntity(UserDTO source) {
         return new User(source.getId(),
@@ -48,7 +32,7 @@ public class UserConverter {
     public List<UserDTO> convertToDto(Collection<User> source) {
         return source.stream()
                 .map(this::convertUserToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private UserDTO convertUserToDto(User source) {
